fix invisible white color

--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,7 @@ footer .well {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
+
+#albumSelection{
+    color: black;
+}
